--- a/Pastecard/Info.plist
+++ b/Pastecard/Info.plist
@@ -9,6 +9,16 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>systemBackground</string>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>UIImageName</key>
+			<string>blueNav</string>
+		</dict>
+	</dict>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
