--- a/Pastecard/Info.plist
+++ b/Pastecard/Info.plist
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIColorName</key>
-		<string>systemBackground</string>
-		<key>UINavigationBar</key>
-		<dict>
-			<key>UIImageName</key>
-			<string>LaunchBlue</string>
-		</dict>
-	</dict>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-</dict>
+    <dict>
+        <key>CFBundleIcons</key>
+        <dict>
+            <key>CFBundlePrimaryIcon</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>AppIcon</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <false/>
+            </dict>
+            <key>CFBundleAlternateIcons</key>
+            <dict>
+                <key>AltIcon</key>
+                <dict>
+                    <key>CFBundleIconFiles</key>
+                    <array>
+                        <string>AltIcon</string>
+                    </array>
+                    <key>UIPrerenderedIcon</key>
+                    <false/>
+                </dict>
+            </dict>
+        </dict>
+        <key>UILaunchScreen</key>
+        <dict>
+            <key>UIColorName</key>
+            <string>systemBackground</string>
+            <key>UINavigationBar</key>
+            <dict>
+                <key>UIImageName</key>
+                <string>LaunchBlue</string>
+            </dict>
+        </dict>
+        <key>UIViewControllerBasedStatusBarAppearance</key>
+        <false/>
+    </dict>
 </plist>
